@@ -1,18 +1,135 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>plugins</artifactId>
-    <groupId>net.refractions</groupId>
-    <version>1.3.0-SNAPSHOT</version>
-  </parent>
-  <groupId>net.refractions</groupId>
-  <artifactId>net.refractions.udig.ui.tests</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
-  <packaging>eclipse-test-plugin</packaging>
-  
-  
-  
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<artifactId>plugins</artifactId>
+		<groupId>net.refractions</groupId>
+		<version>1.3.0-SNAPSHOT</version>
+	</parent>
+
+	<groupId>net.refractions</groupId>
+	<artifactId>net.refractions.udig.ui.tests</artifactId>
+	<version>1.2.0-SNAPSHOT</version>
+
+	<packaging>eclipse-test-plugin</packaging>
+
+	<profiles>
+
+		<profile>
+			<id>Mac OS</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<tycho.test.OSspecific>-XstartOnFirstThread</tycho.test.OSspecific>
+			</properties>
+		</profile>
+
+		<profile>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<tycho.test.OSspecific />
+			</properties>
+		</profile>
+
+
+		<profile>
+			<id>coverage</id>
+			<activation>
+				<property>
+					<name>coverage</name>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<dependencies>
+							<dependency>
+								<groupId>emma</groupId>
+								<artifactId>emma_ant</artifactId>
+								<version>2.0.5312</version>
+							</dependency>
+							<dependency>
+								<groupId>emma</groupId>
+								<artifactId>emma</artifactId>
+								<version>2.0.5312</version>
+							</dependency>
+						</dependencies>
+						<executions>
+							<execution>
+								<id>emma-report</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<taskdef resource="emma_ant.properties" />
+										<echo>Process emma report...</echo>
+										<emma enabled="true">
+											<report>
+												<infileset dir="${project.build.directory}/emma"
+													includes="*.es" />
+												<txt outfile="${project.build.directory}/emma/coverage.txt" />
+												<xml outfile="${project.build.directory}/emma/coverage.xml" />
+												<html outfile="${project.build.directory}/emma/coverage.html" />
+												<!-- Could also generate an HTML report, if you want... -->
+											</report>
+										</emma>
+										<loadfile property="emma.txt"
+											srcFile="${project.build.directory}/emma/coverage.txt"
+											failonerror="false" />
+										<echo>${emma.txt}</echo>
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		
+	</profiles>
+
+	<properties>
+		<tycho.test.jvmArgs>-Xmx128m -XX:MaxPermSize=256m -Dsdtcore.headless ${tycho.test.OSspecific}</tycho.test.jvmArgs>
+	</properties>
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<useUIHarness>true</useUIHarness>
+					<product>net.refractions.udig-product</product>
+					<application>org.eclipse.ui.ide.workbench</application>
+					<argLine>${tycho.test.jvmArgs}</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>${tycho-provider}</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<environments combine.self="override">
+					</environments>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
+
+
 </project>
